.workspace-data/cache/repo-33e59f1f5d53b03b/crates/next-custom-transforms/tests/errors/server-actions/server-graph/15/input.js
export default function Default() {
  'use cache'
}

export function foo() {
  'use cache'
}

export const bar = () => {
  'use cache'
}
